# dev-doctor

./: .devdoctor.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dev_doctor/: cli.py  reporting.py  runner.py
dev_doctor/checks/: base.py  command.py  env.py  filesystem.py  tcp.py
examples/: .devdoctor.yml
